anypoint-private-cloud/v/1.7/demo-ldap-server.adoc
= 配置演示LDAP服务器
:keywords:ldap, on-prem, on premises, external identity

本主题介绍如何使用Anypoint Platform私有云版提供的演示LDAP服务器。安装单节点配置时，安装程​​序会自动安装演示LDAP服务器并配置平台以使用此服务器进行身份管理。

安装程序完成后，使用LDAP存储库中的测试用户凭据登录到您的Anypoint Platform安装。


LDAP服务器中的== 默认数据

在安装过程中，演示LDAP服务器用于演示目的的用户和组。您可以添加您的其他用户和组。该服务器由两个组构成，每个组都映射到平台上的业务组：

* 营销
* 销售

该服务器还填充了多个用户，每个用户在不同的业务组中都有不同的角色。

**Note:**每个用户都使用默认密码`Mule1234!`创建。

[%header,cols="2*a"]
|===
|用户名 |用户名
| 组织管理员 |  `admin`
|  API创作者 |  `apicreator`
| 运行时管理员管理员 | `ARMadmin`
| 日志查看器 | `logviewer`
| 营销业务组管理员 | `MarketingAdmin`（仅限于营销业务组）
|  API门户查看器 | `portalviewer`
| 销售业务组管理员 | `SalesAdmin`（仅限于销售业务组）
|===


== 访问LDAP服务器

要编辑LDAP服务器中的默认数据，您可以通过以下URL以管理员身份访问它：

----
http://<public_ip_of_your_installation>:31200/
----

使用这些凭据：

**  DIN：`cn=admin,dc=mulesoft,dc=local`
** 密码：`Password1`

== 测试安装

安装完成后，请以上述测试用户身份登录Anypoint Platform。

. 打开浏览器并使用*MarketingAdmin*用户登录到Anypoint Platform。
+
如果LDAP配置正常工作，则可以访问Anypoint Platform登录页面：
+
image:demo-ldap-server-5f4ad.png[]

. 在用户所属的业务组列表中，仅显示*Marketing*业务组。

+
image:demo-ldap-server-3e223.png[]

.  MarketingAdmin LDAP组在此测试组织中配置了角色`Exchange administrator`和`Application Admin (Sandbox)`。您可以通过使用Anypoint Exchange执行任务来验证用户是交换管理员。这也适用于应用程序管理员角色，这使您可以使用Runtime Manager部署和管理应用程序。

. 注销，然后以*SalesAdmin*用户身份重新登录。只有*Sales*用户出现在用户的业务组中。
